2014-10-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (SEARCH_STATE, push_isearch, pop_isearch)
	(pop_isearch_prompt, incremental_search): Represent result of 
	search with an enum search_result instead of an int.
	(incremental_search): Don't say an empty search string is 
	failing.

2014-10-29  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\chapmacro): \checkenv, since chapters
	should presumably not appear inside environments.
	(\sectionheading): allow @heading-series commands, but not others,
	to appear inside environments.  Report from Mahlon Smith,
	25 Aug 2014 09:42:16; original change made following
	https://savannah.gnu.org/bugs/?15514.
	* doc/texinfo.texi (@t{@@unnumberedsec @@appendixsec @@heading})
	<@@heading>: @heading-series cannot appear literally "anywhere",
	though they can appear inside most environments, unlike the
	normal sectioning commands.

2014-10-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (gc_file_buffers_and_nodes): Keep on checking 
	for referenced file buffers after one is found for a node.  
	Report from Werner Lemberg.
	* info/t/gc-split.sh: New test.

2014-10-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_dispatch_on_key): Don't display a 
	completed key sequence when in the echo area.

2014-10-28  Patrice Dumas  <pertusus@free.fr>

	* Texinfo/Convert/DocBook.pm: also upper-case accented commands
	when in the 'upper_case' context.

2014-10-27  Patrice Dumas  <pertusus@free.fr>

	* Texinfo/Convert/DocBook.pm (upper_case_style_commands): use
	a context of 'upper_case' to track situation where upper casing
	of text should be done instead of upper-casing already converted
	output.

2014-10-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_reference_marker) Return value says 
	whether syntax was valid.
	<cross-references>: Demand that cross-reference marker is 
	followed by whitespace.
	(scan_node_contents): Call to scan_reference_marker updated.